--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css"> <!--linkeo de CSS-->
         <title>Lolo Store</title>
+        <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
         <header> <!--Ecabezado - solo uno por archivo html-->
